--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
+db.url=jdbc:mysql://localhost:3306/task5_db
+db.username=aslan
+db.password=aslanpwd
 
 # Hibernate properties
 hibernate.show_sql=true
